# closet-code-challenge

./: Dockerfile  Makefile  README.md  TODO.md  archtectural-decision-record(ADR)  challenge.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
src/: main.py
tests/: test_main.py
