[tool.poetry]
name = "close-code-challenge"
version = "0.1.0"
description = "Code challange for Close"
authors = ["y"]
license = "MIT"
readme = "README.md"
packages = [{include = "close_code_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
redis = "^4.5.4"

[tool.poetry.group.dev.dependencies]
pytest-ruff = "^0.0.6"
pytest = "7.3.1"
black = "^23.3.0"
ruff = "^0.0.265"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
